# pow

./: CHANGELOG.md  Cargo.toml  README.md
assets/: _pow.zsh
src/: cli.rs  complete.rs  config.rs  error.rs  git.rs  github.rs  main.rs  paths.rs  repo_setup.rs  resolve.rs  shell.rs  template.rs  ui.rs
src/source/: add.rs  add_github.rs  filter.rs  mod.rs  sync.rs
src/workspace/: lifecycle.rs  mod.rs  nav.rs  show.rs  work.rs
tests/: repo_setup.rs  source_management.rs  templates.rs  workspace_lifecycle.rs
tests/common/: mod.rs
