[package]
name = "pow"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Project-oriented workspace CLI — manage multi-repo workspaces via git worktrees."
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
dialoguer = "0.11"
indicatif = "0.17"
color-eyre = "0.6"
thiserror = "1"
octocrab = "0.39"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
futures = "0.3"
glob = "0.3"
shellexpand = "3"
which = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
